--- a/lab42.html
+++ b/lab42.html
@@ -21,7 +21,7 @@
         }
        
         #b {
-            background-color: yellow;
+            background-color:green;
             width: 200px;
             height: 100px;
             position: absolute;
@@ -32,7 +32,7 @@
 
         
         #c {
-            background-color: green;
+            background-color: black;
             width: 115px;
             height: 100px;
             position: absolute;
